<resources>
    <string name="app_name">AnimationApp</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_link">Don\'t have an account? Sign Up</string>
    <string name="signup">Signup</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_enter">Enter Email</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
</resources>
